syntax="proto3";

package proto;
option go_package = "./;proto";

import "mom_common.proto";
import "product_package_type.proto";

message ProductPackageInfo {
	//ID 
    string id=2;
	//代号 
 	string code=3;
	//描述
    string description=4;
	//识别码 
    string identifier=5;
	//包装数量 
 	int32 packageQuantity=6;
	//数量单位 
    string quantityUnit=7;
	//毛重 
 	float grossWeight=8;
	//净重 
 	float netWeight=9;
	//重量单位 
    string weightUnit=10;
	//尺寸 
    string measure=11;
	//尺寸单位 
    string measureUnit=12;
	//备注 
    string remark=13;
	//包装类型ID 
    string productPackageTypeID=14;
    ProductPackageTypeInfo productPackageType=15;
}

message QueryProductPackageRequest{
    // @inject_tag: uri:"pageIndex" form:"pageIndex"
    int64 pageIndex=1;
    // @inject_tag: uri:"pageSize" form:"pageSize"
    int64 pageSize=2;
    // @inject_tag: uri:"sortConfig" form:"sortConfig"
    string sortConfig=3;
	//代号 
    // @inject_tag: uri:"code" form:"code"
  string code=5;
}

message QueryProductPackageResponse{
    Code code=1;
    string message=2;
    repeated ProductPackageInfo data=3;
    int64 pages=4;
    int64 records=5;
    int64 total=6;
}

message GetAllProductPackageResponse{
    Code code=1;
    string message=2;
    repeated ProductPackageInfo data=3;
}

message GetProductPackageDetailResponse{
    Code code=1;
    string message=2;
    ProductPackageInfo data=3;
}